Updated playlist.html with my favorite songs

--- a/HW_01/playlist.html
+++ b/HW_01/playlist.html
@@ -9,33 +9,35 @@
 </head>
 
 <body>
-    <h1>☕ Chill & Lofi Playlist 🎧</h1>
+    <h1>☕ My favorite Playlist 🎧</h1>
 
     <table>
         <thead>
             <tr>
                 <th>Track Name</th>
                 <th>Type</th>
-                <th>Thumbnail</th>
                 <th>Video</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Lofi Beats to Relax/Study</td>
-                <td>Stream</td>
-                <td><img src="https://i.ytimg.com/vi/jfKfPfyJRdk/hqdefault.jpg" alt="Lofi Girl"></td>
-                <td><iframe width="250" height="140" src="https://www.youtube.com/embed/jfKfPfyJRdk" frameborder="0"
-                        allow="autoplay; fullscreen; picture-in-picture; encrypted-media" allowfullscreen></iframe></td>
+                <td>Tattoo song</td>
+                <td>hip Hop</td>
+                <td><iframe width="250" height="140" src="https://www.youtube.com/embed/_IqI2bf9CCQ?si=5B4tGzIGY7tDHZiN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
             </tr>
 
             <tr>
-                <td>Morning Coffee Jazz</td>
-                <td>Jazz/Chill</td>
-                <td><img src="https://i.ytimg.com/vi/Dx5qFachd3A/hqdefault.jpg" alt="Coffee Jazz"></td>
-                <td><iframe width="250" height="140" src="https://www.youtube.com/embed/Dx5qFachd3A" frameborder="0"
-                        allow="autoplay; fullscreen; picture-in-picture; encrypted-media" allowfullscreen></iframe></td>
+                <td>What I Need</td>
+                <td>Hip Hop</td>
+                <td><iframe width="250" height="140" src="https://www.youtube.com/embed/uGfqdcRgzho?si=YIaFiFV1g3LZxVup" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
             </tr>
+            
+                <tr>
+                <td>SUNSET ORGANIC HOUSE 2025</td>
+                <td>Deep HOUSE</td>
+                <td><iframe width="250" height="140" src="https://www.youtube.com/embed/bKGK5fgzL4E?si=yc4koZLPaCr7muXc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
+
 
         </tbody>
     </table>
