added photo of bebuging

--- a/HW_01/tags.html
+++ b/HW_01/tags.html
@@ -14,6 +14,7 @@
         <h1>Complete HTML Tags Reference Guide</h1>
         <p>A comprehensive demonstration of HTML tags without CSS styling</p>
     </header>
+    <button id="skin-switcher-btn">Change Skin</button>
 
     <nav>
         <h2>Navigation</h2>
@@ -633,6 +634,7 @@ function example() {
         <p>Total tags demonstrated: 100+</p>
         <small>This page contains most HTML5 tags for educational purposes</small>
     </footer>
+    <script src="skin-switcher.js"></script>
 </body>
 
 </html>
