added summary.html with links

--- a/HW_01/audioList.html
+++ b/HW_01/audioList.html
@@ -6,8 +6,16 @@
     <title>Audio Playlist</title>
     
     <link rel="stylesheet" href="audioList.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+    <nav>
+        <a href="playlist.html">Playlist (שלב ב)</a>
+        <a href="contact.html">Contact (שלב ג)</a>
+        <a href="audioList.html" class="active">Audio (שלב ד)</a>
+        <a href="tags.html">Skins (שלב ה)</a>
+        <a href="summary.html">סיכום (שלב ו)</a>
+    </nav>
 
     <h2>My Audio List</h2>
 
