--- a/HW_01/contact.html
+++ b/HW_01/contact.html
@@ -6,9 +6,17 @@
     <title>Contact Page</title>
     
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="nav.css">
 
 </head>
 <body>
+    <nav>
+        <a href="playlist.html">Playlist (שלב ב)</a>
+        <a href="contact.html" class="active">Contact (שלב ג)</a>
+        <a href="audioList.html">Audio (שלב ד)</a>
+        <a href="tags.html">Skins (שלב ה)</a>
+        <a href="summary.html">סיכום (שלב ו)</a>
+    </nav>
 
     <h2>Send a Message</h2>
 
