--- a/HW_01/playlist.html
+++ b/HW_01/playlist.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chill Music Playlist</title>
     <link rel="stylesheet" href="playlist.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
+    <nav>
+        <a href="playlist.html" class="active">Playlist (שלב ב)</a>
+        <a href="contact.html">Contact (שלב ג)</a>
+        <a href="audioList.html">Audio (שלב ד)</a>
+        <a href="tags.html">Skins (שלב ה)</a>
+        <a href="summary.html">סיכום (שלב ו)</a>
+    </nav>
     <h1>☕ My favorite Playlist 🎧</h1>
 
     <table>
