--- a/HW_01/tags.html
+++ b/HW_01/tags.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Tags Reference - Comprehensive List</title>
     <link id="skin-link" rel="stylesheet" href="SKINS/modern.css">
+    <link rel="stylesheet" href="nav.css">
 
 </head>
 
 <body>
+    <nav>
+        <a href="playlist.html">Playlist (שלב ב)</a>
+        <a href="contact.html">Contact (שלב ג)</a>
+        <a href="audioList.html">Audio (שלב ד)</a>
+        <a href="tags.html" class="active">Skins (שלב ה)</a>
+        <a href="summary.html">סיכום (שלב ו)</a>
+    </nav>
+
     <header>
         <h1>Complete HTML Tags Reference Guide</h1>
         <p>A comprehensive demonstration of HTML tags without CSS styling</p>
